[workspace]

members = [
    "asn1",
    "x690",
    "ldap",
    "x500",
    "idm",
    "x500-client",
    "mock-tcpstream",
    "tsp",
    "cms",
    "tsp-server",
    "x500dsa",
    "dirstudio",
    "dirstudio/src-tauri",
    "dirstudio-api-types",
    "tpkt",
    "x691",
    "rose",
    "rose-idm",
    "rose-stream",
]
