[workspace]

members = [
    "asn1",
    "x690",
    "ldap",
    "x500",
    "idm",
    "x500-client",
    "mock-tcpstream",
    "cms",
    "tsp-server",
    "x500dsa",
    "dirstudio",
    "dirstudio/src-tauri",
    "dirstudio-api-types",
    "nsap-address",
    "tpkt",
    "x691",
    "rose",
    "rose-idm",
    "rose-stream",
    "teletex",
    "gser",
    "ldap-schema-parsers",
    "rfc4523-parsing",
    "osi-net",
]
