[workspace]
resolver = "3"
members = [
    "asn1",
    "x690",
    "ldap",
    "x500",
    "idm",
    "x500-client",
    "mock-tcpstream",
    "cms",
    "tsp-server",
    "x500dsa",
    "nsap-address",
    "tpkt",
    "x691",
    "rose",
    "rose-idm",
    "rose-stream",
    "teletex",
    "gser",
    "ldap-schema-parsers",
    "rfc4523-parsing",
    "osi-net",
    "fuzz",
    "asn1lex",
    "iso6093",
    "ldapdn",
    "pki-stub",
    "x520-stringprep",
]

[workspace.dependencies]
atoi_simd = "0.16.0"
likely_stable = "0.1.3"
