[package]
name = "wildboar-asn1"
version = "3.0.0"
edition = "2021"
authors = [
    "Jonathan M. Wilbur <jonathan@wilbur.space>",
    "Wildboar Software <jonathan.wilbur@wildboarsoftware.com>",
]
description = "Abstract Syntax Notation 1 (ASN.1)"
readme = "README.md"
repository = "https://github.com/JonathanWilbur/asn1.rs/tree/master/asn1"
license = "MIT"
keywords = ["asn", "asn1", "abstract", "syntax", "notation"]
categories = ["encoding"]

[dependencies]
atoi_simd = { version = "0.16.0", optional = true }
faster-hex = { version = "0.10.0", optional = true }
itoa = { version = "1", optional = true }
likely_stable = { version = "0.1.3", optional = true }
arbitrary = { version = "1", optional = true, features = ["derive"] }
smallvec = { version = "1", optional = true, features = ["union"] }

[features]
default = []

[dev-dependencies]
criterion = "0.6"
smallvec = { version = "1" }

[[bench]]
name = "oid"
harness = false

# [[bench]]
# name = "date"
# harness = false

