[package]
name = "dirstudio-api-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asn1 = { path = "../asn1" }
x500 = { path = "../x500" }
x690 = { path = "../x690" }
yew = { version="0.20" }
serde = { version = "1", features = ["derive"] }
rose = { path = "../rose" }
hex = "0.4.3"
