[package]
name = "dirstudio-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde-wasm-bindgen = "0.4.3"
js-sys = "0.3.59"
serde = { version = "1.0.140", features = ["derive"] }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
web-sys = "0.3.59"
yew = { version="0.20.0", features = ["csr"] }
asn1 = { path = "../asn1" }
x500 = { path = "../x500" }
x690 = { path = "../x690" }
serde_json = "1.0.96"
log = "0.4.17"
wasm-logger = "0.2.0"
dirstudio-api-types = { path = "../dirstudio-api-types" }
hex = "0.4.3"

# [workspace]
# members = ["src-tauri"]
