[package]
name = "asn1-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.wildboar-asn1]
path = "../asn1"
features = ["arbitrary"]

[[bin]]
name = "date"
path = "fuzz_targets/date.rs"
test = false
doc = false
bench = false

[[bin]]
name = "time_of_day"
path = "fuzz_targets/time_of_day.rs"
test = false
doc = false
bench = false

[[bin]]
name = "datetime"
path = "fuzz_targets/datetime.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bitstring"
path = "fuzz_targets/bitstring.rs"
test = false
doc = false
bench = false

[[bin]]
name = "duration"
path = "fuzz_targets/duration.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gentime"
path = "fuzz_targets/gentime.rs"
test = false
doc = false
bench = false

[[bin]]
name = "utctime"
path = "fuzz_targets/utctime.rs"
test = false
doc = false
bench = false

[[bin]]
name = "asn1utils"
path = "fuzz_targets/asn1utils.rs"
test = false
doc = false
bench = false

[[bin]]
name = "oid"
path = "fuzz_targets/oid.rs"
test = false
doc = false
bench = false
