[package]
name = "asn1-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bytes = "1.4.0"

[dependencies.wildboar-asn1]
path = "../asn1"
features = ["arbitrary"]

[dependencies.x690]
path = "../x690"

[dependencies.ldapdn]
path = "../ldapdn"

[dependencies.x520-stringprep]
path = "../x520-stringprep"

[[bin]]
name = "date"
path = "fuzz_targets/date.rs"
test = false
doc = false
bench = false

[[bin]]
name = "time_of_day"
path = "fuzz_targets/time_of_day.rs"
test = false
doc = false
bench = false

[[bin]]
name = "datetime"
path = "fuzz_targets/datetime.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bitstring"
path = "fuzz_targets/bitstring.rs"
test = false
doc = false
bench = false

[[bin]]
name = "duration"
path = "fuzz_targets/duration.rs"
test = false
doc = false
bench = false

[[bin]]
name = "gentime"
path = "fuzz_targets/gentime.rs"
test = false
doc = false
bench = false

[[bin]]
name = "utctime"
path = "fuzz_targets/utctime.rs"
test = false
doc = false
bench = false

[[bin]]
name = "asn1utils"
path = "fuzz_targets/asn1utils.rs"
test = false
doc = false
bench = false

[[bin]]
name = "oid"
path = "fuzz_targets/oid.rs"
test = false
doc = false
bench = false

[[bin]]
name = "timevalidate"
path = "fuzz_targets/timevalidate.rs"
test = false
doc = false
bench = false

[[bin]]
name = "real"
path = "fuzz_targets/real.rs"
test = false
doc = false
bench = false

[[bin]]
name = "x690fuzz"
path = "fuzz_targets/x690fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ldapdn"
path = "fuzz_targets/ldapdn.rs"
test = false
doc = false
bench = false

[[bin]]
name = "stringprep"
path = "fuzz_targets/stringprep.rs"
test = false
doc = false
bench = false
