[package]
name = "ldap"
version = "0.1.0"
edition = "2021"
authors = [
    "Jonathan M. Wilbur <jonathan@wilbur.space>",
    "Wildboar Software <jonathan.wilbur@wildboarsoftware.com>",
]
description = "Lightweight Directory Access Protocol (LDAP)"
readme = "README.md"
repository = "https://github.com/JonathanWilbur/asn1.rs/tree/master/ldap"
license = "MIT"
license-file = "LICENSE.txt"
keywords = ["ldap", "directory", "x500"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asn1 = { path = "../asn1" }
x690 = { path = "../x690" }
