[package]
name = "wildboar-ldap"
version = "1.0.0"
edition = "2021"
authors = [
    "Jonathan M. Wilbur <jonathan@wilbur.space>",
    "Wildboar Software <jonathan.wilbur@wildboarsoftware.com>",
]
description = "Lightweight Directory Access Protocol (LDAP)"
readme = "README.md"
repository = "https://github.com/JonathanWilbur/asn1.rs/tree/master/ldap"
license = "MIT"
keywords = ["ldap", "directory", "x500"]
categories = ["network-programming"]

[dependencies]
wildboar-asn1 = { path = "../asn1" }
x690 = { path = "../x690" }
