[package]
name = "ldapdn"
version = "1.0.0"
edition = "2024"
authors = [
    "Jonathan M. Wilbur <jonathan@wilbur.space>",
    "Wildboar Software <jonathan.wilbur@wildboarsoftware.com>",
]
description = "LDAP Distinguished Name (DN) unescaping and zero-copy parsing"
readme = "README.md"
repository = "https://github.com/JonathanWilbur/asn1.rs/tree/master/ldapdn"
license = "MIT"
keywords = ["ldap", "dn", "directory", "name"]
categories = ["encoding", "parser-implementations", "no-std", "no-std::no-alloc"]

[features]
default = ["alloc"]
alloc = []
