[package]
name = "nsap-address"
version = "1.0.0"
edition = "2024"
authors = [
    "Jonathan M. Wilbur <jonathan@wilbur.space>",
    "Wildboar Software <jonathan.wilbur@wildboarsoftware.com>",
]
description = "ITU-T Rec. X.213 NSAP address parsing, printing, etc."
readme = "README.md"
repository = "https://github.com/JonathanWilbur/asn1.rs/tree/master/nsap-address"
license = "MIT"
keywords = ["nsap", "x213", "osi"]
categories = ["network-programming", "no-std"]

[dependencies]
faster-hex = "0.10.0"

[features]
default = ["alloc"]
alloc = []
x25 = []
ecma117 = []
nonstd = []
nonstddisplay = ["nonstd"]
