[package]
name = "rose-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wildboar-asn1 = { path = "../asn1" }
rose = { path = "../rose" }
x500 = { path = "../x500" }
x690 = { path = "../x690" }
async-trait = "0.1.59"
tower = { version = "0.4.13", features = ["timeout", "limit", "util"] }
tokio = { version = "1", features = ["net", "macros", "rt", "time"] }
rose-idm = { path = "../rose-idm" }
idm = { path = "../idm" }
