[package]
name = "rose-transport"
version = "0.1.0"
edition = "2021"
authors = [
    "Jonathan M. Wilbur <jonathan@wilbur.space>",
    "Wildboar Software <jonathan.wilbur@wildboarsoftware.com>",
]
description = "Remote Operation Service Element (ROSE) transport abstraction"
readme = "README.md"
repository = "https://github.com/JonathanWilbur/asn1.rs/tree/master/rose-transport"
license = "MIT"
keywords = ["rose", "rpc", "remote", "operation"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asn1 = { path = "../asn1" }
x500 = { path = "../x500" }
x690 = { path = "../x690" }
async-trait = "0.1.59"
