[package]
name = "rose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asn1 = { path = "../asn1" }
x500 = { path = "../x500" }
x690 = { path = "../x690" }
async-trait = "0.1.59"
tokio = "1"
