[package]
name = "teletex"
version = "1.0.0"
edition = "2024"
authors = [
    "Jonathan M. Wilbur <jonathan@wilbur.space>",
    "Wildboar Software <jonathan.wilbur@wildboarsoftware.com>",
]
description = "ITU-T Recommendation T.61 / Teletex to Unicode conversion"
readme = "README.md"
repository = "https://github.com/JonathanWilbur/asn1.rs/tree/master/teletex"
license = "MIT"
keywords = ["teletex", "t61"]
categories = ["encoding", "no-std"]
