[package]
name = "tpkt3"
version = "1.0.0"
edition = "2024"
authors = [
    "Jonathan M. Wilbur <jonathan@wilbur.space>",
    "Wildboar Software <jonathan.wilbur@wildboarsoftware.com>",
]
description = "ISO Transport over TCP (ITOT) TPKT Decoding"
readme = "README.md"
repository = "https://github.com/JonathanWilbur/asn1.rs/tree/master/tpkt3"
license = "MIT"
keywords = ["itot", "osi", "rfc983", "rfc1006", "rfc2126"]
categories = ["no-std", "network-programming"]
