[package]
name = "x500-client"
version = "0.1.0"
edition = "2021"
authors = [
    "Jonathan M. Wilbur <jonathan@wilbur.space>",
    "Wildboar Software <jonathan.wilbur@wildboarsoftware.com>",
]
description = "X.500 directory data structures and functionality"
readme = "README.md"
repository = "https://github.com/JonathanWilbur/asn1.rs/tree/master/x500-client"
license = "MIT"
keywords = ["x500", "directory", "ldap", "client"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asn1 = { path = "../asn1" }
idm = { path = "../idm" }
rose-transport = { path = "../rose-transport" }
x500 = { path = "../x500" }
x690 = { path = "../x690" }
tokio = { version = "1", features = ["net", "macros", "rt", "time"] }
async-trait = "0.1.59"
tokio-stream = "0.1"
