[package]
name = "x500"
version = "0.1.0"
edition = "2021"
rust-version = "1.71.0"
authors = [
    "Jonathan M. Wilbur <jonathan@wilbur.space>",
    "Wildboar Software <jonathan.wilbur@wildboarsoftware.com>",
]
description = "X.500 directory data structures and functionality"
readme = "README.md"
repository = "https://github.com/JonathanWilbur/asn1.rs/tree/master/x500"
license = "MIT"
keywords = ["x500", "directory", "ldap"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wildboar-asn1 = { path = "../asn1" }
x690 = { path = "../x690" }
ldap = { path = "../ldap" }
teletex = { path = "../teletex" }
nsap-address = { path = "../nsap-address" }
hex = "0.4.3"
punycode = "0.4.1"
cow-utils = "0.1.3"
isocountry = "0.3.2"
bytes = "1.4.0"
