[package]
name = "x500dsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wildboar-asn1 = { path = "../asn1" }
idm = { path = "../idm" }
x500 = { path = "../x500" }
x690 = { path = "../x690" }
wildboar-ldap = { path = "../ldap" }
thiserror = "1.0.40"
async-trait = "0.1.59"
tokio-stream = "0.1"
